--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
         <article>
             <h2>Curso de HTML5 e CSS3</h2>
-            <p>Modificando a Master em Git e GitHub</p>
+            <p><abbr title="HYPERTEXT MARKUP LANGUAGE">HTML</abbr> Master em Git e GitHub><abbr title="Cascading style stylesheet">CSS</abbr>criamos as configurações visuais </p>
         </article>
         <article>
             <h2>Modificando a Master em Git e GitHub </h2>
